# lh_device

./: .gdbinit  CHANGELOG  CMakeLists.txt  NOTES.md  README.md  prj.conf  setup-env.sh  wuerth_proteus-iii.overlay
boards/arm/wuerth_proteus-iii/: Kconfig.board  Kconfig.defconfig  board.cmake  wuerth_proteus-iii.dts  wuerth_proteus-iii.yaml  wuerth_proteus-iii_defconfig
child_image/mcuboot/: pm_static.yml  prj.conf
child_image/mcuboot/boards/: wuerth_proteus-iii.conf  wuerth_proteus-iii.overlay
modules/max17048/: CMakeLists.txt  Kconfig
modules/max17048/drivers/sensor/max17048/: CMakeLists.txt  max17048.c  max17048.h
modules/max17048/dts/bindings/sensor/: maxim,max17048.yaml
patches/: 1-wire.patch  1-wire_new.patch  uart.patch
src/: adc.c  adc.h  battery.c  battery.h  ble.c  ble.h  main.c  power.c  power.h  pwm.c  pwm.h  storage.c  storage.h  temp.c  temp.h
